# tinybuf

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmark.cpp  分析.md
.github/workflows/: ci.yml
3rdpart/dyncall-1.4/: CMakeLists.txt
3rdpart/jsoncpp/: json_reader.cpp  json_writer.cpp
examples/plugin-rs/: Cargo.toml
examples/plugin-rs/demo/: Cargo.toml
examples/plugin-rs/demo/src/: main.rs
examples/plugin-rs/tinybuf_plugin_rs/: Cargo.toml  build.rs
examples/plugin-rs/tinybuf_plugin_rs/src/: lib.rs
examples/plugin-rs/upper_plugin_rs/: Cargo.toml  build.rs
examples/plugin-rs/upper_plugin_rs/src/: lib.rs
examples/plugin-zig/: build.zig
examples/plugin-zig/src/: main.zig  plugin.zig
src/core/: type_core.c  type_core.h  type_core_slim.h
src/dyn_sys/: dyn_integration.c  dyn_sys.c  dyn_sys.h  type_core.c  type_core.h  types.h
src/dyn_sys/zig/: build.zig
src/dyn_sys/zig/src/: lib.zig
src/include/: system.hpp  tinybuf.h  tinybuf_buffer.h  tinybuf_common.h  tinybuf_log.h  tinybuf_memory.h  tinybuf_oop.h  tinybuf_plugin.h  tinybuf_support.h
src/interpret/: 计划.md
src/interpret/tinybuf_script/: Cargo.toml  build.rs  comprehensive_test.tbs  demo_test.tbs  mode_test.tbs  test_features.tbs  test_lisp.tbs  test_one_line.tbs
src/interpret/tinybuf_script/src/: ast.rs  file.tbs  grammar.lalrpop  grammar.rs  interpreter.rs  lib.rs  more.tbs  token.rs
src/plugins/: system_data.c  system_extend.c  upper_plugin.c
src/source/: tinybuf.c  tinybuf_buffer.c  tinybuf_deserialize.c  tinybuf_dump.c  tinybuf_json.c  tinybuf_log.c  tinybuf_memory.c  tinybuf_plugin.c  tinybuf_precache.c  tinybuf_private.h  tinybuf_read_box.c  tinybuf_result.c  tinybuf_serialize.c  tinybuf_strpool.c  tinybuf_support.c  tinybuf_types.c  tinybuf_value_api.c  tinybuf_value_ops.c  tinybuf_write.c
src/static_oop/: static_oop.h
src/system_plugins/: basic_customs.c  upper_string_plugin.c
src/tb_lock/: tb_lock.h
tests/: catch_test_logger.cpp  system_extend_tests.cpp
tests/unit/: basic_custom_tests.cpp  hole_string_tests.cpp  system_extend_plugin_tests.cpp
